fix alignment of cols

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -372,7 +372,7 @@ nav #menu-right, nav #menu-action {
 
 #column aside {
 	margin: 0 0 15px 0;
-	padding-bottom: 10px;
+	padding-bottom: 4px;
 	background-color: #EFEFEF;
 	@include border_radius(4px);
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
